tests/tc/neg/union04.js

/*@ foo :: forall A. (A) => A */
function foo(x) {

  return 1;

}
